Adding todos, fix styles

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <div class="container-fluid">
         <!-- NAVBAR -->
+        <!-- TODO: Add nutrition item -->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="navbar">
             <a class="navbar-brand" href="#">
                 <img src="img/image2.png"> Wolves Calisthenics
@@ -43,6 +44,7 @@
         </nav>
 
         <!-- Main Section -->
+        <!-- TODO: Use a single img for logo and slogan to avoid resize issues -->
         <div class="section main">
             <div class="holder">
                 <div class="homesvg">
@@ -56,6 +58,7 @@
         </div>
 
         <!-- Services Section -->
+        <!-- TODO: Use cards with images, search references -->
         <div class="section services">
             <div class="container-fluid">
                 <h2 class="section-title mb-2 h1">What we do</h2>
