Finished home page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 <body>
     <div class="container-fluid">
         <!-- NAVBAR -->
-        <!-- TODO: Add nutrition item -->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="navbar">
             <a class="navbar-brand" href="#">
                 <img src="img/image2.png"> Wolves Calisthenics
@@ -25,11 +24,11 @@
             <div class="collapse navbar-collapse" id="navbarText2">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="#">Home</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="#">About Calisthenics</a>
-                    </li> -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Nutrition</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Shop</a>
                     </li>
@@ -44,21 +43,19 @@
         </nav>
 
         <!-- Main Section -->
-        <!-- TODO: Use a single img for logo and slogan to avoid resize issues -->
         <div class="section main">
             <div class="holder">
                 <div class="homesvg">
-                    <img src="img/LogoJuank.svg.png">
+                    <img src="img/slogan.png">
                 </div>
-                <article id="homeheader">
+                <!-- <article id="homeheader">
                     <h1>Wolves <span>Calisthenics</span></h1>
                     <h2>Do more, do it hard</h2>
-                </article>
+                </article> -->
             </div>
         </div>
 
         <!-- Services Section -->
-        <!-- TODO: Use cards with images, search references -->
         <div class="section services">
             <div class="container-fluid">
                 <h2 class="section-title mb-2 h1">What we do</h2>
@@ -67,60 +64,144 @@
                 <div class="row mt-5">
                     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
                         <div class="card">
-                            <div class="card-block">
-                                <h3 class="card-title">Workout programs</h3>
-                                <p class="card-text">The best programs to beginners and advanced athletes.</p>
-                                <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
+                            <div class="front">
+                                <div class="card-image">
+                                    <img class="activator" src="img/ca1.jpg">
+                                </div>
+                                <div class="card-block">
+                                    <i class="fa fa-plus ml-2 rot"></i>
+                                    <h3 class="card-title">Workout programs</h3>
+                                    <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
+                                </div>
+                            </div>
+                            <div class="back">
+                                <div class="card-block">
+                                    <i class="fa fa-times-circle fa-lg ml-2 clrot"></i>
+                                    <h3 class="card-title">Workout programs</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae eros tincidunt, finibus ex ac, convallis massa. Vivamus dictum ipsum neque, ac tristique eros ullamcorper vel. Donec rutrum, dolor nec egestas
+                                        facilisis, mi libero tempor odio, a facilisis massa turpis et leo. Sed ac tellus nec elit commodo gravida. Vestibulum.</p>
+                                    <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
+                                </div>
                             </div>
                         </div>
                     </div>
 
                     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
                         <div class="card">
-                            <div class="card-block">
-                                <h3 class="card-title">Personal training</h3>
-                                <p class="card-text">Move from beginner to advanced with the supervision of a certificated trainer.</p>
-                                <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
+                            <div class="front">
+                                <div class="card-image">
+                                    <img class="activator" src="img/ca1.jpg">
+                                </div>
+                                <div class="card-block">
+                                    <i class="fa fa-plus ml-2 rot"></i>
+                                    <h3 class="card-title">Workout programs</h3>
+                                    <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
+                                </div>
+                            </div>
+                            <div class="back">
+                                <div class="card-block">
+                                    <i class="fa fa-times-circle fa-lg ml-2 clrot"></i>
+                                    <h3 class="card-title">Workout programs</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae eros tincidunt, finibus ex ac, convallis massa. Vivamus dictum ipsum neque, ac tristique eros ullamcorper vel. Donec rutrum, dolor nec egestas
+                                        facilisis, mi libero tempor odio, a facilisis massa turpis et leo. Sed ac tellus nec elit commodo gravida. Vestibulum.</p>
+                                    <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
+                                </div>
                             </div>
                         </div>
                     </div>
 
                     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
                         <div class="card">
-                            <div class="card-block">
-                                <h3 class="card-title">Nutrition</h3>
-                                <p class="card-text">We create your individual nutritional program.</p>
-                                <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
+                            <div class="front">
+                                <div class="card-image">
+                                    <img class="activator" src="img/ca1.jpg">
+                                </div>
+                                <div class="card-block">
+                                    <i class="fa fa-plus ml-2 rot"></i>
+                                    <h3 class="card-title">Workout programs</h3>
+                                    <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
+                                </div>
+                            </div>
+                            <div class="back">
+                                <div class="card-block">
+                                    <i class="fa fa-times-circle fa-lg ml-2 clrot"></i>
+                                    <h3 class="card-title">Workout programs</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae eros tincidunt, finibus ex ac, convallis massa. Vivamus dictum ipsum neque, ac tristique eros ullamcorper vel. Donec rutrum, dolor nec egestas
+                                        facilisis, mi libero tempor odio, a facilisis massa turpis et leo. Sed ac tellus nec elit commodo gravida. Vestibulum.</p>
+                                    <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
+                                </div>
                             </div>
                         </div>
                     </div>
 
                     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
                         <div class="card">
-                            <div class="card-block">
-                                <h3 class="card-title">Street workouts</h3>
-                                <p class="card-text">Go out and do your best with us!</p>
-                                <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
+                            <div class="front">
+                                <div class="card-image">
+                                    <img class="activator" src="img/ca1.jpg">
+                                </div>
+                                <div class="card-block">
+                                    <i class="fa fa-plus ml-2 rot"></i>
+                                    <h3 class="card-title">Workout programs</h3>
+                                    <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
+                                </div>
+                            </div>
+                            <div class="back">
+                                <div class="card-block">
+                                    <i class="fa fa-times-circle fa-lg ml-2 clrot"></i>
+                                    <h3 class="card-title">Workout programs</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae eros tincidunt, finibus ex ac, convallis massa. Vivamus dictum ipsum neque, ac tristique eros ullamcorper vel. Donec rutrum, dolor nec egestas
+                                        facilisis, mi libero tempor odio, a facilisis massa turpis et leo. Sed ac tellus nec elit commodo gravida. Vestibulum.</p>
+                                    <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
+                                </div>
                             </div>
                         </div>
                     </div>
 
                     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
                         <div class="card">
-                            <div class="card-block">
-                                <h3 class="card-title">Equipment</h3>
-                                <p class="card-text">Get the best quality in handcrafted exercise equipment.</p>
-                                <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
+                            <div class="front">
+                                <div class="card-image">
+                                    <img class="activator" src="img/ca1.jpg">
+                                </div>
+                                <div class="card-block">
+                                    <i class="fa fa-plus ml-2 rot"></i>
+                                    <h3 class="card-title">Workout programs</h3>
+                                    <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
+                                </div>
+                            </div>
+                            <div class="back">
+                                <div class="card-block">
+                                    <i class="fa fa-times-circle fa-lg ml-2 clrot"></i>
+                                    <h3 class="card-title">Workout programs</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae eros tincidunt, finibus ex ac, convallis massa. Vivamus dictum ipsum neque, ac tristique eros ullamcorper vel. Donec rutrum, dolor nec egestas
+                                        facilisis, mi libero tempor odio, a facilisis massa turpis et leo. Sed ac tellus nec elit commodo gravida. Vestibulum.</p>
+                                    <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
+                                </div>
                             </div>
                         </div>
                     </div>
 
                     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
                         <div class="card">
-                            <div class="card-block">
-                                <h3 class="card-title">Motivation</h3>
-                                <p class="card-text">We are here to help you reach your goals.</p>
-                                <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
+                            <div class="front">
+                                <div class="card-image">
+                                    <img class="activator" src="img/ca1.jpg">
+                                </div>
+                                <div class="card-block">
+                                    <i class="fa fa-plus ml-2 rot"></i>
+                                    <h3 class="card-title">Workout programs</h3>
+                                    <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
+                                </div>
+                            </div>
+                            <div class="back">
+                                <div class="card-block">
+                                    <i class="fa fa-times-circle fa-lg ml-2 clrot"></i>
+                                    <h3 class="card-title">Workout programs</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae eros tincidunt, finibus ex ac, convallis massa. Vivamus dictum ipsum neque, ac tristique eros ullamcorper vel. Donec rutrum, dolor nec egestas
+                                        facilisis, mi libero tempor odio, a facilisis massa turpis et leo. Sed ac tellus nec elit commodo gravida. Vestibulum.</p>
+                                    <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
+                                </div>
                             </div>
                         </div>
                     </div>
