--- a/nutrition.html
+++ b/nutrition.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Wolves Calisthenics</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/nutrition.css">
     <link rel="stylesheet" href="fonts/fontawesome/css/all.css">
     <link rel="icon" type="image/png" href="img/favicon.png">
 </head>
@@ -23,10 +23,10 @@
                 </button>
             <div class="collapse navbar-collapse" id="navbarText2">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="nutrition.html">Nutrition</a>
                     </li>
                     <li class="nav-item">
@@ -54,8 +54,8 @@
         <!-- Services Section -->
         <div class="section services">
             <div class="container-fluid">
-                <h2 class="section-title mb-2 h1">What we do</h2>
-                <p class="text-center text-muted h5">Change your life, join Wolves Calisthenics.</p>
+                <h2 class="section-title mb-2 h1">MOVIMENTO</h2>
+                <p class="text-center text-muted h5">Sustainable nutrition coaching for everyone</p>
 
                 <div class="row mt-5 justify-content-md-center">
                     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
@@ -66,14 +66,14 @@
                                 </div>
                                 <div class="card-block">
                                     <i class="fa fa-plus ml-2 rot"></i>
-                                    <h3 class="card-title">Introductory program</h3>
+                                    <h3 class="card-title">Nutritional Coaching</h3>
                                     <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
                                 </div>
                             </div>
                             <div class="back">
                                 <div class="card-block">
                                     <i class="fa fa-times-circle fa-lg ml-2 clrot"></i>
-                                    <h3 class="card-title">Introductory program</h3>
+                                    <h3 class="card-title">Nutritional Coaching</h3>
                                     <p>This program is basic to learn calisthenics and the fundamentals of bodyweight exercises. This program is suitable for people who want to start calisthenics in a correct way from the most fundamental aspects.</p>
                                     <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
                                 </div>
@@ -89,14 +89,14 @@
                                 </div>
                                 <div class="card-block">
                                     <i class="fa fa-plus ml-2 rot"></i>
-                                    <h3 class="card-title">Program for beginners</h3>
+                                    <h3 class="card-title">Half Time Nutritional Coaching</h3>
                                     <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
                                 </div>
                             </div>
                             <div class="back">
                                 <div class="card-block">
                                     <i class="fa fa-times-circle fa-lg ml-2 clrot"></i>
-                                    <h3 class="card-title">Program for beginners</h3>
+                                    <h3 class="card-title">Half Time Nutritional Coaching</h3>
                                     <p>Start with the basics of calisthenics, this program is designed to learn the basic exercises and the best way to start gaining super human strength.</p>
                                     <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
                                 </div>
@@ -112,14 +112,14 @@
                                 </div>
                                 <div class="card-block">
                                     <i class="fa fa-plus ml-2 rot"></i>
-                                    <h3 class="card-title">Intermediate Program</h3>
+                                    <h3 class="card-title">Nutrition + Calisthenics</h3>
                                     <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
                                 </div>
                             </div>
                             <div class="back">
                                 <div class="card-block">
                                     <i class="fa fa-times-circle fa-lg ml-2 clrot"></i>
-                                    <h3 class="card-title">Intermediate Program</h3>
+                                    <h3 class="card-title">Nutrition + Calisthenics</h3>
                                     <p>Start to exploit your potential, this program is designed to take your workouts to another level, includes advanced exercises, challenges and a new level of strength in your workouts
                                     </p>
                                     <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
@@ -136,87 +136,16 @@
                                 </div>
                                 <div class="card-block">
                                     <i class="fa fa-plus ml-2 rot"></i>
-                                    <h3 class="card-title">Advanced program</h3>
+                                    <h3 class="card-title">Movimento + Wolves Elite Program</h3>
                                     <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
                                 </div>
                             </div>
                             <div class="back">
                                 <div class="card-block">
                                     <i class="fa fa-times-circle fa-lg ml-2 clrot"></i>
-                                    <h3 class="card-title">Advanced program</h3>
+                                    <h3 class="card-title">Movimento + Wolves Elite Program</h3>
                                     <p>Get super human strength. A program with routines, progressions and advanced skills that will take you to overcome your level of training, for this program it is recommended to have completed the program of beginners
                                         and the advanced program</p>
-                                    <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
-                        <div class="card">
-                            <div class="front">
-                                <div class="card-image">
-                                    <img class="activator" src="img/ca1.jpg">
-                                </div>
-                                <div class="card-block">
-                                    <i class="fa fa-plus ml-2 rot"></i>
-                                    <h3 class="card-title">Weighted calisthenics</h3>
-                                    <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
-                                </div>
-                            </div>
-                            <div class="back">
-                                <div class="card-block">
-                                    <i class="fa fa-times-circle fa-lg ml-2 clrot"></i>
-                                    <h3 class="card-title">Weighted calisthenics</h3>
-                                    <p>Increase your strength. This program is designed to show how to start calisthenics with weight to the most advanced, such as learning to do more repetitions and have control over your strength and your body</p>
-                                    <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
-                        <div class="card">
-                            <div class="front">
-                                <div class="card-image">
-                                    <img class="activator" src="img/ca1.jpg">
-                                </div>
-                                <div class="card-block">
-                                    <i class="fa fa-plus ml-2 rot"></i>
-                                    <h3 class="card-title">Mobility and flexibility</h3>
-                                    <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
-                                </div>
-                            </div>
-                            <div class="back">
-                                <div class="card-block">
-                                    <i class="fa fa-times-circle fa-lg ml-2 clrot"></i>
-                                    <h3 class="card-title">Mobility and flexibility</h3>
-                                    <p>Learn and acquire greater mobility and flexibility in your body. Mobility is a form of movement to increase stability and the active range of movement in your joints. If you can’t control your muscles, you cannot improve
-                                        your mobility.</p>
-                                    <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
-                        <div class="card">
-                            <div class="front">
-                                <div class="card-image">
-                                    <img class="activator" src="img/ca1.jpg">
-                                </div>
-                                <div class="card-block">
-                                    <i class="fa fa-plus ml-2 rot"></i>
-                                    <h3 class="card-title">Silver wolf program</h3>
-                                    <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
-                                </div>
-                            </div>
-                            <div class="back">
-                                <div class="card-block">
-                                    <i class="fa fa-times-circle fa-lg ml-2 clrot"></i>
-                                    <h3 class="card-title">Silver wolf program</h3>
-                                    <p>Dominate your body, strength, flexibility and mobility with a single program. A complete program with all the levels of calisthenics that will allow you to learn to control your own body weight, different skills such
-                                        as handstand, front lever, back lever, among others. This program includes all the programs in one.</p>
                                     <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
                                 </div>
                             </div>
@@ -280,4 +209,4 @@
 
 </html>
 
-<!-- TODO: Testimonials -->
+<!-- TODO: Add comparison table -->
