refactor, added table and testimonial

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Wolves Calisthenics</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/refactor.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="fonts/fontawesome/css/all.css">
     <link rel="icon" type="image/png" href="img/favicon.png">
@@ -57,7 +58,7 @@
                 <h2 class="section-title mb-2 h1">What we do</h2>
                 <p class="text-center text-muted h5">Change your life, join Wolves Calisthenics.</p>
 
-                <div class="row mt-5 justify-content-md-center">
+                <div class="row mt-5 justify-content-center">
                     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
                         <div class="card">
                             <div class="front">
@@ -226,6 +227,63 @@
                 </div>
             </div>
         </div>
+
+        <!-- Testimonials -->
+        <div class="section testi-container">
+            <div class="row d-flex text-center justify-content-center mb-md-0 mb-4">
+                <div class="col-10 mt-5 mb-5">
+                    <hr>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="owl-carousel owl-theme">
+                        <div class="item">
+                            <div class="testimonial">
+                                <!--Avatar-->
+                                <div class="avatar mx-auto mb-4">
+                                    <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(30).jpg" class="rounded-circle img-fluid" alt="First sample avatar image">
+                                </div>
+                                <!--Content-->
+                                <p>
+                                    <i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eos id officiis hic tenetur quae quaerat ad velit ab. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore
+                                    cum accusamus eveniet molestias voluptatum inventore laboriosam labore sit, aspernatur praesentium iste impedit quidem dolor veniam.
+                                </p>
+                                <h4 class="font-weight-bold">Anna Deynah</h4>
+                                <h6 class="font-weight-bold my-3">Founder at ET Company</h6>
+                                <!--Review-->
+                                <i class="fas fa-star blue-text"> </i>
+                                <i class="fas fa-star blue-text"> </i>
+                                <i class="fas fa-star blue-text"> </i>
+                                <i class="fas fa-star blue-text"> </i>
+                                <i class="fas fa-star-half-alt blue-text"> </i>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <div class="testimonial">
+                                <!--Avatar-->
+                                <div class="avatar mx-auto mb-4">
+                                    <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(30).jpg" class="rounded-circle img-fluid" alt="First sample avatar image">
+                                </div>
+                                <!--Content-->
+                                <p>
+                                    <i class="fas fa-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eos id officiis hic tenetur quae quaerat ad velit ab. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore
+                                    cum accusamus eveniet molestias voluptatum inventore laboriosam labore sit, aspernatur praesentium iste impedit quidem dolor veniam.
+                                </p>
+                                <h4 class="font-weight-bold">Anna Deynah</h4>
+                                <h6 class="font-weight-bold my-3">Founder at ET Company</h6>
+                                <!--Review-->
+                                <i class="fas fa-star blue-text"> </i>
+                                <i class="fas fa-star blue-text"> </i>
+                                <i class="fas fa-star blue-text"> </i>
+                                <i class="fas fa-star blue-text"> </i>
+                                <i class="fas fa-star-half-alt blue-text"> </i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <footer class="page-footer font-small dark-footer">
@@ -275,9 +333,10 @@
 
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/dist/owl.carousel.min.js"></script>
+    <link rel="stylesheet" href="js/dist/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="js/dist/assets/owl.theme.default.min.css">
     <script src="js/front.js"></script>
 </body>
 
 </html>
-
-<!-- TODO: Testimonials -->
