--- a/nutrition.html
+++ b/nutrition.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Wolves Calisthenics</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/refactor.css">
     <link rel="stylesheet" href="css/nutrition.css">
     <link rel="stylesheet" href="fonts/fontawesome/css/all.css">
     <link rel="icon" type="image/png" href="img/favicon.png">
@@ -57,7 +58,7 @@
                 <h2 class="section-title mb-2 h1">MOVIMENTO</h2>
                 <p class="text-center text-muted h5">Sustainable nutrition coaching for everyone</p>
 
-                <div class="row mt-5 justify-content-md-center">
+                <div class="row mt-5 justify-content-center">
                     <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
                         <div class="card">
                             <div class="front">
@@ -74,7 +75,8 @@
                                 <div class="card-block">
                                     <i class="fa fa-times-circle fa-lg ml-2 clrot"></i>
                                     <h3 class="card-title">Nutritional Coaching</h3>
-                                    <p>This program is basic to learn calisthenics and the fundamentals of bodyweight exercises. This program is suitable for people who want to start calisthenics in a correct way from the most fundamental aspects.</p>
+                                    <p>Guia nutricional personalizada y flexible con seguimiento semanal, creada para cumplir cualquier tipo de meta física a través de un proceso de aprendizaje para poder mantener el cambio a largo plazo. Incluye plan personalizado,
+                                        recetario, guia de habitos, base de datos de alimentos, y mas!</p>
                                     <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
                                 </div>
                             </div>
@@ -97,7 +99,8 @@
                                 <div class="card-block">
                                     <i class="fa fa-times-circle fa-lg ml-2 clrot"></i>
                                     <h3 class="card-title">Half Time Nutritional Coaching</h3>
-                                    <p>Start with the basics of calisthenics, this program is designed to learn the basic exercises and the best way to start gaining super human strength.</p>
+                                    <p>Guia nutricional personalizada y flexible con seguimiento quincenal, creada para cumplir cualquier tipo de meta física a través de un proceso de aprendizaje para poder mantener el cambio a largo plazo. Incluye plan
+                                        personalizado, recetario, guia de habitos, base de datos de alimentos, y mas!</p>
                                     <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
                                 </div>
                             </div>
@@ -120,7 +123,7 @@
                                 <div class="card-block">
                                     <i class="fa fa-times-circle fa-lg ml-2 clrot"></i>
                                     <h3 class="card-title">Nutrition + Calisthenics</h3>
-                                    <p>Start to exploit your potential, this program is designed to take your workouts to another level, includes advanced exercises, challenges and a new level of strength in your workouts
+                                    <p>El paquete completo. Guia nutricional personalizada y flexible junto con entrenamiento de Calistenia con seguimiento semanal, para que podas llegar a tu meta fisica de la manera más eficiente.
                                     </p>
                                     <a href="#" title="Read more" class="read-more">Read More <i class="fa fa-angle-double-right ml-2"></i></a>
                                 </div>
@@ -152,6 +155,77 @@
                         </div>
                     </div>
 
+                </div>
+            </div>
+        </div>
+        <!-- TABLE -->
+        <div class="section comparison">
+            <div class="row d-flex text-center justify-content-center mb-md-0 mb-4">
+                <div class="col-10 mt-5 mb-5">
+                    <hr>
+                </div>
+            </div>
+            <div class="row d-flex text-center justify-content-center">
+                <div class="col-12">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th scope="col">Plan</th>
+                                <th scope="col">Guia nutricional personalizada</th>
+                                <th scope="col">Guia de Habitos</th>
+                                <th scope="col">Recetario </th>
+                                <th scope="col">Base de Datos de Alimentos </th>
+                                <th scope="col">Grupo de Apoyo </th>
+                                <th scope="col">Consultas</th>
+                                <th scope="col">Seguimiento </th>
+                                <th scope="col">Ajustes </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Half Time Nutritional Coaching</td>
+                                <td>
+                                    <div class="check"></div>
+                                </td>
+                                <td>
+                                    <div class="check"></div>
+                                </td>
+                                <td>
+                                    <div class="check"></div>
+                                </td>
+                                <td>
+                                    <div class="check"></div>
+                                </td>
+                                <td>
+                                    <div class="check"></div>
+                                </td>
+                                <td>Ilimitadas</td>
+                                <td>Cada dos semanas</td>
+                                <td>Cada dos semanas</td>
+                            </tr>
+                            <tr>
+                                <td>Half Time Nutritional Coaching</td>
+                                <td>
+                                    <div class="check"></div>
+                                </td>
+                                <td>
+                                    <div class="check"></div>
+                                </td>
+                                <td>
+                                    <div class="check"></div>
+                                </td>
+                                <td>
+                                    <div class="check"></div>
+                                </td>
+                                <td>
+                                    <div class="check"></div>
+                                </td>
+                                <td>Ilimitadas</td>
+                                <td>Cada dos semanas</td>
+                                <td>Cada dos semanas</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
