--- a/nutrition.html
+++ b/nutrition.html
@@ -31,7 +31,7 @@
                         <a class="nav-link" href="nutrition.html">Nutrition</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Shop</a>
+                        <a class="nav-link" href="shop.html">Shop</a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link">FAQ</a>
